# BlazeDB

./: .gitignore  BLAZEDB_COMPLETE.md  BLAZEDB_GAPS_AND_ISSUES_AUDIT.md  BLAZEDB_VERIFICATION_STATUS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_AUDIT_REPORT.md  CONTRIBUTING.md  FINAL_LINUX_AUDIT.md  LINUX_BRINGUP_STATUS.md  LINUX_COMPATIBILITY_AUDIT.md  Package.resolved  Package.swift  README.md  RELEASE.md  RELEASE_NOTES_v0.1.3.md  RELEASE_POSTURE.md  SECURITY.md  TESTING_COVERAGE.md  THIRD_PARTY_NOTICES.md  VERSION  blazedb_medium_article.html  blazedb_medium_article.md
.build/: build.db  debug.yaml  workspace-state.json
.github/: CODEOWNERS  FUNDING.yml  REPOSITORY_AUTOMATION.md  dependabot.yml  pull_request_template.md
BlazeDB/: BlazeDB-Package.xctestplan  BlazeDB.swift  BlazeDBReexport.swift  BlazeDB_Benchmark.xctestplan  BlazeDB_Core.xctestplan  BlazeDB_Core_Integration.xctestplan  BlazeDB_Destructive.xctestplan  BlazeDB_Full.xctestplan  BlazeDB_Full_CI.xctestplan  BlazeDB_Integration.xctestplan  BlazeDB_Nightly.xctestplan  BlazeDB_Quick.xctestplan
BlazeDB.xcodeproj/: project.pbxproj
BlazeDBBenchmarks/: MemorySampler.swift  OpenProfiler.swift  main.swift
BlazeDBCLITests/: BlazeCLICoreTests.swift
BlazeDBExtraTests/: Package.swift  README.md
BlazeDBIntegrationTests/: SecurityEncryptionTests.swift  TelemetryIntegrationTests.swift
BlazeDBShim/: BlazeDBReexport.swift
BlazeDBTests/: AggregationTests.swift  ArrayDictionaryEdgeTests.swift  BlazeBinaryReliabilityTests.swift  BlazeBinaryUltimateBulletproofTests.swift  BlazeCollectionTests.swift  BlazeDBAsyncTests.swift  BlazeDBConcurrencyTests.swift  BlazeDBCrashSimTests.swift.swift  BlazeDBManagerTests.swift  BlazeDBMemoryTests.swift  BlazeDBMigrationTests.swift  BlazeDBPerformanceTests.swift  BlazeDBPersistanceTests.swift  BlazeDBRecoveryTests.swift  BlazeDBStressTests.swift  BlazeDBTests.swift  BlazeDataCRUDTests.swift  BlazePaginationTests.swift  BlazeQueryTests.swift  BlazeTransactionTests.swift  CriticalBlockerTests.swift  DataSeedingTests.swift  DataTypeQueryTests.swift  DistributedGCPerformanceTests.swift  DistributedSecurityTests.swift  DynamicCollectionTests.swift  EnhancedErrorMessagesTests.swift  FailureInjectionTests.swift  FuzzTests.swift  GCControlAPITests.swift  IOFaultInjectionTests.swift  KeyManagerTests.swift  MVCCFoundationTests.swift  MVCCIntegrationTests.swift  PageStoreEdgeCaseTests.swift  PageStoreTests.swift  PerformanceProfilingTests.swift  PersistenceIntegrityTests.swift  SearchIndexMaintenanceTests.swift  SearchPerformanceBenchmarks.swift  (+5 more)
BlazeDBVisualizer/: README.md
BlazeDoctor/: main.swift
BlazeDump/: main.swift
BlazeInfo/: main.swift
BlazeMCP/: main.swift
BlazeServer/: BlazeServerMain.swift  main.swift
BlazeShell/: BlazedbPicker.swift  BlazedbRepl.swift  CLIBranding.swift  CLIColors.swift  CLIDatabasePasswordResolver.swift  CLIDiscovery.swift  CLIHelp.swift  CLIHomeScanner.swift  CLIMasterDeviceVault.swift  CLIMasterKeyring.swift  CLIMasterSession.swift  CLIPasswordReader.swift  CLIPaths.swift  CLIPickerModels.swift  CLIPickerRender.swift  CLIProjectPasswordResolver.swift  CLIRLSConfigStore.swift  CLIRegistry.swift  CLIRelativeTime.swift  CLIStartupSplash.swift  CLITerminalDraw.swift  CLITerminalSize.swift  TerminalRawMode.swift  main.swift
BlazedbCLI/: BlazedbEntry.swift
Docs/: AGENTS_GUIDE.md  API_STABILITY.md  ARCHITECTURE.md  ARCHITECTURE_COMPARISON.md  ARCHITECTURE_DETAILED.md  ARCHIVE_INDEX.md  ARM_CODE_REVIEW.md  ARM_CODE_REVIEW_COMPLETE.md  ARM_OPTIMIZATION_SUMMARY.md  BENCHMARK_INSTRUCTIONS.md  BETA_PRODUCTION_READINESS.md  BLAZEBINARY_PROTOCOL_AND_IO_AUDIT.md  BLAZEBINARY_PROTOCOL_AUDIT.md  BLAZEDB_ARCHITECTURE_AND_LIMITS.md  BLAZEDB_ASSURANCE_MATRIX.md  BLAZEDB_AUDIT_REPORT.md  BLAZEDB_BINARY_IO_OPTIMIZATION.md  BLAZEDB_COMPLETE.md  BLAZEDB_SYSTEM_DESIGN_DIAGRAM.md  BLAZEDB_THREAT_MODEL.md  BUILD_ERRORS_RESOLUTION.md  BUILD_STATUS.md  BUILD_SYSTEM_ISSUES.md  CHANGELOG.md  CODE_AUDIT_FIXES.md  CODE_AUDIT_REPORT.md  COMPATIBILITY.md  COMPATIBILITY_VERIFICATION.md  COMPRESSION_DESIGN.md  CRASH_POINTS_FIXED.md  DEPRECATE_BLAZECOLLECTION.md  DEVELOPER_GUIDE.md  DISTRIBUTED_SYNC_AUDIT.md  DISTRIBUTED_SYNC_CLARIFICATION.md  DUAL_CODEC_VALIDATION_COMPLETE.md  ENGINE_INTEGRATION_COMPLETE.md  FATALERROR_REMOVAL.md  FEATURE_ROADMAP.md  FINAL_MIGRATION_INSTRUCTIONS.md  (+48 more)
Examples/android/app/src/main/cpp/: CMakeLists.txt  blazedb_jni_shim.c
(+2290 files in other folders)
